--- a/infrastructure/infrastructure/Pulumi.prod.yaml
+++ b/infrastructure/infrastructure/Pulumi.prod.yaml
@@ -1,9 +1,10 @@
 config:
   azure-native:location: westus2
   cst8918-a03-infra:appPath: ../
-  cst8918-a03-infra:containerPort: '80'
-  cst8918-a03-infra:publicPort: '80'
-  cst8918-a03-infra:cpu: '1'
-  cst8918-a03-infra:memory: '2'
-  cst8918-a03-infra:prefixName: 'cst8918-a03-dunne0203'
-  cst8918-a03-infra:imageTag: 'v0.1.0'
+  cst8918-a03-infra:containerPort: "80"
+  cst8918-a03-infra:publicPort: "80"
+  cst8918-a03-infra:cpu: "1"
+  cst8918-a03-infra:memory: "2"
+  cst8918-a03-infra:prefixName: "dunne0203"
+  cst8918-a03-infra:imageTag: "v0.1.0"
+
