--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@pulumi/azure-native": "^3.13.0",
         "@pulumi/docker-build": "^0.0.15",
-        "@pulumi/pulumi": "^3.113.0"
+        "@pulumi/pulumi": "^3.113.0",
+        "redis": "^5.10.0"
     }
 }
